--- a/Professionals/res/values/strings.xml
+++ b/Professionals/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Freelance</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="updateme">עדכן אותי כפרילנסר</string>
     <string name="menu_settings">Settings</string>
     <string name="no_notes">clints not found</string>
     <string name="menu_insert">Add Note</string>
